--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # MyBatis Configuration
 mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.type-aliases-package=com.example.demo.pojo
+<typeHandlers>
+<typeHandler handler="com.example.demo.handler.MapTypeHandler"/>
+</typeHandlers>
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
