--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,13 @@
 server.port=8081
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # MyBatis Configuration
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.example.demo.pojo
-<typeHandlers>
-<typeHandler handler="com.example.demo.handler.MapTypeHandler"/>
-</typeHandlers>
 mybatis.configuration.map-underscore-to-camel-case=false
 
 spring.servlet.multipart.enabled=true
