--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # MyBatis Configuration
-mybatis.mapper-locations=classpath:mapper/*.xml
+#mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.type-aliases-package=com.example.demo.pojo
 mybatis.configuration.map-underscore-to-camel-case=false
 
