--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,11 @@
         </dependency>
 
         <!--自己根据需要选择是否注释-->
-        <!--<dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.18.0</version> &lt;!&ndash; 请使用最新版本 &ndash;&gt;
-        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--            <artifactId>jackson-databind</artifactId>-->
+<!--            <version>2.18.0</version> &lt;!&ndash; 请使用最新版本 &ndash;&gt;-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
