--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,7 +9,16 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.type-aliases-package=com.example.demo.pojo
-mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.map-underscore-to-camel-case=false
+# \u6253\u5F00 MyBatis SQL \u8C03\u8BD5\u65E5\u5FD7[\u4E0B\u9762\u90FD\u662Fwq\u4E2A\u4EBA\u6D4B\u8BD5\u6240\u7528]
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+#spring.jackson.time-zone=Asia/Beijing
+#logging.level.org.mybatis=debug
+# \u9488\u5BF9\u4F60\u7684 Mapper \u7C7B\u589E\u52A0\u65E5\u5FD7\u8F93\u51FA
+#logging.level.com.example.demo.mapper=debug
+
+
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
