--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 <!--            <artifactId>jackson-databind</artifactId>-->
 <!--            <version>2.18.0</version> &lt;!&ndash; 请使用最新版本 &ndash;&gt;-->
 <!--        </dependency>-->
+        <!-- rabbit mq -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
