--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 #spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Shanghai
 #spring.datasource.username=root
 #spring.datasource.password=root
