用户优惠券测试合格

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,9 @@ mybatis.configuration.map-underscore-to-camel-case=false
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 #spring.jackson.time-zone=Asia/Beijing
-#logging.level.org.mybatis=debug
-# \u9488\u5BF9\u4F60\u7684 Mapper \u7C7B\u589E\u52A0\u65E5\u5FD7\u8F93\u51FA
+#logging.level.org.mybatis=DEBUG
+#logging.level.java.sql=DEBUG
+## \u9488\u5BF9\u4F60\u7684 Mapper \u7C7B\u589E\u52A0\u65E5\u5FD7\u8F93\u51FA
 #logging.level.com.example.demo.mapper=debug
 
 
