--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,13 @@ spring.servlet.multipart.max-request-size=10MB
 server.servlet.session.timeout=30m
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=false
+
+alipay.appId=
+alipay.appPrivateKey=
+alipay.notifyUrl=  /alipay/notify
+alipay.returnUrl1= http://localhost:8080/#/shopmodel/promotionManage
+alipay.returnUrl2=http://localhost:8080/#/user/orders
+alipay.signType=RSA2
+alipay.charset=utf-8
+alipay.gatewayUrl=https://openapi-sandbox.dl.alipaydev.com/gateway.do
+alipay.alipayPub=
