--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.type-aliases-package=com.example.demo.pojo
 mybatis.configuration.map-underscore-to-camel-case=false
+# application.properties
+file.upload-dir=/img/
 # \u6253\u5F00 MyBatis SQL \u8C03\u8BD5\u65E5\u5FD7[\u4E0B\u9762\u90FD\u662Fwq\u4E2A\u4EBA\u6D4B\u8BD5\u6240\u7528]
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
